--- a/IP/index.html
+++ b/IP/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/WEB_GL.loader.js";
+      var loaderUrl = buildUrl + "/IP.loader.js";
       var config = {
-        dataUrl: buildUrl + "/WEB_GL.data",
-        frameworkUrl: buildUrl + "/WEB_GL.framework.js",
-        codeUrl: buildUrl + "/WEB_GL.wasm",
+        dataUrl: buildUrl + "/IP.data",
+        frameworkUrl: buildUrl + "/IP.framework.js",
+        codeUrl: buildUrl + "/IP.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Test-IP",
