--- a/Meteo/index.html
+++ b/Meteo/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Meteo VR_Data.loader.js";
+      var loaderUrl = buildUrl + "/Meteo.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Meteo VR_Data.data.br",
-        frameworkUrl: buildUrl + "/Meteo VR_Data.framework.js.br",
-        codeUrl: buildUrl + "/Meteo VR_Data.wasm.br",
+        dataUrl: buildUrl + "/Meteo.data.unityweb",
+        frameworkUrl: buildUrl + "/Meteo.framework.js.unityweb",
+        codeUrl: buildUrl + "/Meteo.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Meteo VR",
